--- a/index.html
+++ b/index.html
@@ -159,9 +159,7 @@
         <!-- About Us Section -->
         <div class="footer-column">
             <h2>About Us</h2>
-            <p>At Wanderlust Travel Agency, we believe that every journey should be unforgettable. Our expert travel
-                agents are here to craft personalized trips that cater to your interests and desires, whether you're
-                looking for an exotic beach escape or a cultural city adventure.</p>
+            <p>Village Bazaar is your destination for unique, handmade items crafted by skilled villagers. Our mission is to showcase rural artistry, preserve traditional crafts, and support local artisans. Each product reflects creativity and culture, offering high-quality and sustainable options. Shop with us to bring the charm of the village into your home while empowering communities!</p>
         </div>
 
         <!-- Contact Info Section -->
