--- a/index.html
+++ b/index.html
@@ -162,12 +162,13 @@
             <p>Village Bazaar is your destination for unique, handmade items crafted by skilled villagers. Our mission is to showcase rural artistry, preserve traditional crafts, and support local artisans. Each product reflects creativity and culture, offering high-quality and sustainable options. Shop with us to bring the charm of the village into your home while empowering communities!</p>
         </div>
 
-        <!-- Contact Info Section -->
+         <!-- Contact Info Section -->
         <div class="footer-column contact-info">
             <h3>Contact Us</h3>
-            <p><strong>Phone:</strong> +1 234 567 890</p>
-            <p><strong>Email:</strong> info@wanderlusttravel.com</p>
-            <p><strong>Address:</strong> 123 Traveler's Lane, Adventure City, USA</p>
+            <p><strong>Phone:</strong> 98088-97087</p>
+            <p><strong>Email:</strong> villagebazaar@gmail.com</p>
+            <p><strong>Address:</strong>  Krishna Nagar Near City Mall
+                Delhi India</p>
         </div>
 
         <!-- Quick Links Section -->
