--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@
                 Delhi India</p>
         </div>
 
-        <!-- Quick Links Section -->
+       <!-- Quick Links Section -->
         <div class="footer-column">
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Destinations</a></li>
-                <li><a href="#">Tours</a></li>
-                <li><a href="#">Travel Blog</a></li>
+                <li><a href="#">Bamboo Items</a></li>
+                <li><a href="#">Flowers</a></li>
+                <li><a href="#">Wooden Toys</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
         </div>
